objects/CZFCMAccountTypesList__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom settings maintains  FCM account type values</description>
    <fields>
        <fullName>AccountTypeId__c</fullName>
        <description>Account Type Id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Type Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountType__c</fullName>
        <description>Account Type</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <description>Brand</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Brand</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>FCM Account Types</label>
    <listViews>
        <fullName>DetailView</fullName>
        <columns>NAME</columns>
        <columns>AccountTypeId__c</columns>
        <columns>AccountType__c</columns>
        <columns>Brand__c</columns>
        <filterScope>Everything</filterScope>
        <label>DetailView</label>
        <language>en_US</language>
    </listViews>
</CustomObject>